--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@amber-ds/components": "^1.2.6",
     "@amber-ds/visual": "^1.0.2",
+    "@vaadin/router": "^1.7.1",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "pwa-helpers": "^0.9.1",
