feat(wired): use wired ui components

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "pwa-helpers": "^0.9.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "wired-elements": "^2.0.5"
   }
 }
