--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "author": "mes-etiquettes",
   "license": "MIT",
   "dependencies": {
+    "@material/mwc-icon": "^0.14.1",
     "@vaadin/router": "^1.7.1",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
