--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "start:build": "es-dev-server --root-dir dist --app-index index.html --open --compatibility none",
+    "start:build": "es-dev-server --root-dir dist --app-index index.html --compatibility none",
     "build": "rimraf dist && rollup -c rollup.config.js",
     "start": "es-dev-server --app-index index.html --node-resolve --open --watch"
   },
@@ -46,13 +46,13 @@
   "author": "mes-etiquettes",
   "license": "MIT",
   "dependencies": {
-    "@material/mwc-icon": "^0.14.1",
     "@vaadin/router": "^1.7.1",
     "lit-element": "^2.0.1",
     "lit-html": "^1.0.0",
     "pwa-helpers": "^0.9.1",
     "redux": "^4.0.5",
     "roughjs": "3.1.0",
-    "wired-elements": "^2.0.5"
+    "wired-elements": "^2.0.5",
+    "wired-icon": "0.0.1"
   }
 }
