--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux": "^4.0.5",
     "roughjs": "3.1.0",
     "wired-elements": "^2.0.5",
-    "wired-icon": "0.0.1"
+    "wired-icon": "file:.\\lib\\wired-icon",
+    "wired-lib": "file:.\\lib\\wired-lib"
   }
 }
