--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "husky": "^1.0.0",
     "lint-staged": "^8.0.0",
     "rimraf": "^2.6.3",
-    "rollup": "^1.15.4"
+    "rollup": "^1.15.4",
+    "rollup-plugin-copy": "^3.3.0"
   },
   "eslintConfig": {
     "extends": [
